# rust_crud_app

./: Cargo.toml  README.md
src/: README.md  db.rs  main.rs
