[package]
name = "actix_crud_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"                        # Web framework
serde = { version = "1", features = ["derive"] }    # JSON serialization
serde_json = "1"                      # JSON parsing
sqlx = { version = "0.7", features = ["runtime-actix-native-tls", "mysql", "macros"] } # Async MySQL
dotenv = "0.15"                       # Environment variables
uuid = { version = "1", features = ["serde", "v4"] } # Unique IDs (optional)

